--- a/_includes/sections/projects.html
+++ b/_includes/sections/projects.html
@@ -9,10 +9,19 @@
                 {% if project.github %}
                 <a href="{{ project.github }} "><i class="fa fa-fw fa-github"></i>GitHub</a>
                 {% endif %}
+
+                {% if project.gitlab %}
+                <a href="{{ project.gitlab }} "><i class="fa fa-fw fa-gitlab"></i>GitLab</a>
+                {% endif %}
+
+                {% if project.blogpost %}
+                <a href="{{ project.blogpost }} "><i class="fa fa-f fa-newspaper"></i>Blog Post</a>
+                {% endif %}
+
                 {% if project.website %}
                 <a href="{{ project.website }} "><i class="fa fa-fw fa-home"></i>Homepage</a>
                 {% endif %}
-
+                <br>
             </div>
     </div>
 {% endfor %}
