--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
 </a>
 {% if page.image.feature %}
 <div class="post-image-feature">
-  <img class="feature-image" src=
+  <img style="border-radius: 10px;" class="feature-image" src=
   {% if page.image.feature contains 'https' or page.image.feature contains 'http' %}
   "{{ page.image.feature }}"
   {% else %}
