--- a/_sass/components/_mixins.scss
+++ b/_sass/components/_mixins.scss
@@ -18,6 +18,25 @@
   }
 }
 
+@mixin small-breakpoint {
+  @media (min-width: #{$mobile}) {
+    @content;
+  }
+}
+
+@mixin medium-breakpoint {
+  @media (min-width: #{$tablet}) {
+    @content;
+  }
+}
+
+// Break on desktop
+@mixin large-breakpoint {
+  @media (min-width: #{$desktop}) {
+    @content;
+  }
+}
+
 /**
  * Media query
  */
