--- a/_sass/components/_syntax-highlighting.scss
+++ b/_sass/components/_syntax-highlighting.scss
@@ -3,21 +3,55 @@
    ========================================================================== */
 
 
+pre.language-terminal code.language-terminal {
+  position: relative;
+  padding: 1rem;
+  font-family: $font-family-monospace;
+  border: 1px solid #d8d9da;
+  box-shadow: 3px 5px 20px rgba(0, 0, 0, 0.16);
+  border-radius: 6px;
+  padding-top: 45px;
+  margin: 2rem 0;
+  font-size: 13px;
+  background: white;
+  color: #333;
+
+  &::before {
+    content: '\2022 \2022 \2022';
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    background: #e1e1e1;
+    color: #c2c3c4;
+    width: 100%;
+    font-size: 2.5rem;
+    margin: 0;
+    line-height: 0;
+    padding: 14px 0;
+    text-indent: 4px;
+    letter-spacing: -15px;
+  }
+}
+
 pre, code {
   font-family: $font-family-monospace;
-  color: #525252;
   font-size: 0.9em;
-  background-color: #f8f8f8;
-  font-size: ($font-size-base - 3);
+  background-color: #F4F4F5;
+  font-size: ($font-size-base - 1);
 }
 code {
-  color: #e96900;
+  padding-left: 1px;
+  padding-right: 1px;
+  //color: #25292E;
   border-radius: 2px;
   white-space: nowrap;
 }
 
 
 pre { // only apply for code blocks
+  color: $code-font-color;
+  border-radius: 3px !important;
   overflow: auto;
   display: block;
   padding: 1em;
@@ -27,13 +61,13 @@ pre { // only apply for code blocks
   word-wrap: break-word;
   border-radius: 0;
   font-weight: normal;
+  background-color: #333333;
 }
 pre code {
   background: transparent;
   white-space: pre;
   overflow: auto;
   word-wrap: normal;
-  color: #525252;
   span {
     word-break: break-all;
   }
@@ -44,7 +78,6 @@ pre code {
     position: relative;
   }
   pre code {
-    color: #525252;
     &::before {
       content: attr(data-lang);
       position: absolute;
@@ -63,7 +96,7 @@ pre code {
   .hll { background-color: #ffffcc }
   .c { color: #B0B2B0; font-style: italic } /* Comment */
   .err {  } /* Error */
-  .k { color: #AA22FF; font-weight: bold } /* Keyword */
+  .k { color: $keyword; } /* Keyword */
   .o { color: #666666 } /* Operator */
   .cm { color: #B0B2B0; font-style: italic } /* Comment.Multiline */
   .cp { color: #B0B2B0 } /* Comment.Preproc */
@@ -81,23 +114,23 @@ pre code {
   .gt { color: #0040D0 } /* Generic.Traceback */
   .kc { color: #AA22FF; font-weight: bold } /* Keyword.Constant */
   .kd { color: #AA22FF; font-weight: bold } /* Keyword.Declaration */
-  .kn { color: #AA22FF; font-weight: bold } /* Keyword.Namespace */
+  .kn { color: $keyword } /* Keyword.Namespace */
   .kp { color: #AA22FF } /* Keyword.Pseudo */
-  .kr { color: #AA22FF; font-weight: bold } /* Keyword.Reserved */
+  .kr { color: $class; } /* Keyword.Reserved */
   .kt { color: #00BB00; font-weight: bold } /* Keyword.Type */
   .m { color: #666666 } /* Literal.Number */
-  .s { color: #BB4444 } /* Literal.String */
+  .s { color: $string; } /* Literal.String */
   .na { color: #BB4444 } /* Name.Attribute */
-  .nb { color: #AA22FF } /* Name.Builtin */
-  .nc { color: #0000FF } /* Name.Class */
+  .nb { color: $class; } /* Name.Builtin */
+  .nc { color: $class; } /* Name.Class */
   .no { color: #880000 } /* Name.Constant */
   .nd { color: #AA22FF } /* Name.Decorator */
   .ni { color: #999999; font-weight: bold } /* Name.Entity */
   .ne { color: #D2413A; font-weight: bold } /* Name.Exception */
-  .nf { color: #00A000 } /* Name.Function */
+  .nf { color: $function; } /* Name.Function */
   .nl { color: #A0A000 } /* Name.Label */
-  .nn { color: #0000FF; font-weight: bold } /* Name.Namespace */
-  .nt { color: #008000; font-weight: bold } /* Name.Tag */
+  .nn { color: $code-font-color;} /* Name.Namespace */
+  .nt { color: $string; font-weight: bold } /* Name.Tag */
   .nv { color: #B8860B } /* Name.Variable */
   .ow { color: #AA22FF; font-weight: bold } /* Operator.Word */
   .w { color: #bbbbbb } /* Text.Whitespace */
@@ -116,7 +149,7 @@ pre code {
   .sr { color: #BB6688 } /* Literal.String.Regex */
   .s1 { color: #BB4444 } /* Literal.String.Single */
   .ss { color: #B8860B } /* Literal.String.Symbol */
-  .bp { color: #AA22FF } /* Name.Builtin.Pseudo */
+  .bp { color: $punctuation; } /* Name.Builtin.Pseudo */
   .vc { color: #B8860B } /* Name.Variable.Class */
   .vg { color: #B8860B } /* Name.Variable.Global */
   .vi { color: #B8860B } /* Name.Variable.Instance */
